fix: update z-index clock

--- a/frontend/src/styles/schedule.css
+++ b/frontend/src/styles/schedule.css
@@ -302,6 +302,7 @@
   height: 60px;
   grid-template-columns: repeat(3, 100px);
   justify-content: space-between;
+  isolation: isolate;
 }
 
 .sf-clock-card {
@@ -341,7 +342,7 @@
   position: absolute;
   right: -5px;
   top: 18px;
-  z-index: 0;
+  z-index: -1;
   width: 10px;
   height: 24px;
   border-radius: 20px;
